# scheduler-service

./: .gitignore  Dockerfile  README.md  TEST_COVERAGE.md  pyproject.toml  pyrefly.toml  pytest.ini  run.py
.github/workflows/: ci.yml
frontend/: components.d.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  window.d.ts
frontend/src/api/: request.ts  stats.ts  task.ts  user.ts
frontend/src/components/: AppProvider.vue
frontend/src/layout/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/views/: Dashboard.vue  LoginView.vue  Profile.vue  TaskView.vue
scheduler_service/: __init__.py  broker.py  cli.py  config.py  constants.py  main.py  manage.py  scheduler.py
scheduler_service/api/: __init__.py  decorators.py  schemas.py
scheduler_service/api/v1/: __init__.py  apikey.py  stats.py  task.py  user.py
scheduler_service/api/v1/task/: __init__.py  main.py
scheduler_service/api/v1/user/: __init__.py  main.py  token.py
scheduler_service/models/: __init__.py  apikey.py  task.py  user.py
scheduler_service/service/: __init__.py  request.py
scheduler_service/utils/: __init__.py  logger.py
tests/: conftest.py  const.py  test_apikey.py  test_stats.py  test_task.py  test_task_cron.py  test_user.py
