[project]
name = "scheduler-service"
version = "0.1.0"
description = ""
authors = [
    {name = "CoCongV", email = "cong.lv.yx@gmail.com"},
]
dependencies = [
    "uvicorn~=0.22.0",
    "aioredis~=1.3",
    "click~=8.0",
    "asyncpg~=0.23",
    "tortoise-orm~=0.20.0",
    "passlib~=1.7",
    "pyjwt~=2.1",
    "python-multipart~=0.0.6",
    "dramatiq~=1.14",
    "pika~=1.3.1",
    "httpx~=0.25.0",
    "prompt-toolkit~=3.0",
    "aiodns~=3.0",
    "brotlipy~=0.7",
    "fastapi (>=0.121.3,<0.122.0)",
    "pydantic[email] (>=2.12.4,<3.0.0)",

]
requires-python = ">=3.13,<4.0"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/CoCongV/scheduler-service#"


[project.scripts]
scheduler = "scheduler_service.cli:scheduler"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "scheduler_service"}]

[dependency-groups]
dev = [
    "pylint (>=4.0.3,<5.0.0)",
    "ipython (>=9.7.0,<10.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
]